# python-pyquil

./: .pylintrc  DESCRIPTION.md  README.md  README.rst  pyproject.toml  setup.py
.github/: README.md
.github/workflows/: on-push.yaml  on-push.yml  on-release.yaml
docs/: conf.py  index.rst  licence.rst  qctrlpyquil.rst
examples/: export-a-dynamical-decoupling-sequence-to-pyquil.ipynb
qctrlpyquil/: __init__.py  program.py
tests/: test_pyquil_sequence.py
