[tool.poetry]
name = "qctrl-pyquil"
version = "0.0.6"
description = "Q-CTRL Python PyQuil"
license = "Apache-2.0"
authors = ["Q-CTRL <support@q-ctrl.com>"]
maintainers = ["Q-CTRL <support@q-ctrl.com>"]
readme = "README.md"
homepage = "https://q-ctrl.com"
repository = "https://github.com/qctrl/python-pyquil"
keywords = [
    "q-ctrl",
    "qctrl",
    "quantum control"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Distributed Computing"
]
packages = [
    { include = "qctrlpyquil" },
]

[tool.poetry.dependencies]  # https://poetry.eustace.io/docs/versions
python = ">=3.7.2,<3.9"
numpy = "^1.16"
scipy = "^1.3"
toml = "^0.10.0"
pyquil = "^2.9"
qctrl-open-controls = "^9.1.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pylama = "*"
pylint = "*"
pylint_runner = "*"
sphinx = "^2.2.0"
nbval = "^0.9.5"
qctrl-visualizer = "^3.4.0"

[tool.poetry.urls]
GitHub = "https://github.com/qctrl"
Twitter = "https://twitter.com/qctrlHQ"

[tool.black]
exclude = '''
(
     /(
         docs
     )/
)
'''

[tool.isort]
profile = "black"
force_grid_wrap = "2"
known_first_party = "qctrlopencontrols"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

#  _______________________________________
# / If you update this file, please run   \
# \ poetry update && dephell deps convert /
#  ---------------------------------------
#        \   ^__^
#         \  (oo)\_______
#            (__)\       )\/\
#                ||----w |
#                ||     ||
